@@ -34,6 +34,8 @@
 				<code>java.lang.Object#toString()</code> operation.
 			</li>
 			<li><span class="label label-success">Added</span> A new widget named List has been added, it has the same behavior as the multiple reference widget of the previous release.</li>
+			<li><span class="label label-info">Modified</span> The edit operation of a text field can now be triggered by the loss of focus on the text field.</li>
+			<li><span class="label label-info">Modified</span> The edit operation of a mono-line text field can now be triggered by pressing enter.</li>
 		</ul>
 		<h4 id="DeveloperVisibleChanges">Developer-Visible Changes</h4>
 		<ul>
